src/objects/SMS_Gateway_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>The settings for the actual gateway</description>
    <fields>
        <fullName>Bulk_End_Point__c</fullName>
        <description>The end point for the gateway for sending a message to more than one person</description>
        <label>Bulk End Point</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>The password for the gateway</description>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <description>The short code for the gateway</description>
        <label>Short Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Single_Endpoint__c</fullName>
        <description>end point for sending a single message to one user</description>
        <label>Single Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>The username for the gateway</description>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Sms Gateway Settings</label>
</CustomObject>